# python_roadmap

./: README.md  decorator.py  fuctions_&_args.py  generator_expressions.py  list_comprehensions.py  pyproject.toml  regular_expression.py  typecasting.py  yield_examples.py
