[tool.poetry]
name = "python-roadmap"
version = "0.1.0"
description = ""
authors = ["Anshuman Singh <asingh99cool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
